update the backend flow